# ez-gh-actions

./: .gitignore  .gitleaks.toml  .opencode.json  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile.runner  GEMINI.md  README.md  build.rs  doctor-runner  doctor.sh  install.sh  integrate.sh
.beads/: .gitignore  beads.db  beads.db-wal  config.yaml  issues.jsonl  last-touched  recovered-comments-20260714.jsonl
.claude/: settings.json
.codex/: hooks.json
.cursor/: hooks.json
.dark-factory/: attractor_spec.md  spec.md
.gemini/: settings.json
.githooks/: README.md  commit-msg
artifacts/: fleet-poll-10m.sh
config/: README.md  config.toml.linux-canary.example  config.toml.linux.example  config.toml.mac.example  watchdog.conf
dashboard/: dashboard.js  index.html  style.css
docker/: tar-workspace-wrapper.sh
docs/: 4kv-deploy-plan-20260708.md  EXIT-CRITERIA.md  FIXPLAN-gh-actions-systemic-20260707.md  cutover-honest-20260704.md  ed8-fleet-churn-root-cause-20260707.md  gh-app-token.md  gitleaks-sweep-20260707.md  goal-gap-findings-20260706.md  goal-gap-review-20260706.md  harness-early-victory-5whys.md  host-ops-sudo-block-0725.md  incident-20260706-fleet-outage.md  innovation-canary-slo-20260706.md  lima-vm-colima.service  measure-churn-rate.sh  planning-takeover-20260707.md  retro-48h-runner-problems-20260709.md  spec-reliability-hardening-20260709.md  test-cleanup-stuck-runs.sh  test-queue-backlog-drain.sh  test-verify-exit-criteria-gate4.sh  upstream-stale-runner-cleanup-20260708.md  verify-exit-criteria.sh  watchdog.md  (+2 more)
roadmap/: README.md
(+375 files in other folders)
