[package]
name = "ez-gh-actions"
version = "0.1.0"
edition = "2021"
description = "Easy isolated self-hosted GitHub Actions runners: VM-preferred, container fallback with hard resource limits"
license = "MIT"
repository = "https://github.com/jleechanorg/ez-gh-actions"

[[bin]]
name = "ezgha"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
which = "7"
sd-notify = "0.4"
libc = "0.2"
